Fixed YTP IFrame Bug / Rollup Chat - Added the ability to "roll-up" the Twitch chat and only have the top bar visible. - Fixed a bug in YTP IFrame which was causing the frame to be loaded over and over.

--- a/resources/web/panel/css/style.css
+++ b/resources/web/panel/css/style.css
@@ -320,6 +320,7 @@ td {
     width: 325px;
     border: none !important;
     outline: none !important;
+    background: transparent;
 }
 #chat {
     height: 95%;
